--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,26 +1,36 @@
 name: Generate Snake Animation
 
 on:
+  workflow_dispatch:      # Run manually anytime
   schedule:
-    - cron: "0 0 * * *"   # runs every day
-  workflow_dispatch:
+    - cron: "0 0 * * *"   # Auto daily at midnight UTC
 
 jobs:
   generate:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Generate snake
+      # 1️⃣ Checkout your repo
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      # 2️⃣ Generate the snake animation
+      - name: Generate GitHub Contribution Snake
         uses: Platane/snk@v3
         with:
           github_user_name: khanNazeer-4698
-          outputs: |
-            dist/github-contribution-grid-snake.svg
+          outputs: dist/github-contribution-grid-snake.svg
 
-      - name: Push snake animation
-        uses: crazy-max/ghaction-github-pages@v4
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+      # 3️⃣ Push the snake to the output branch (create if missing)
+      - name: Push to output branch
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git checkout -B output
+          mkdir -p dist
+          mv dist/github-contribution-grid-snake.svg dist/
+          git add dist/github-contribution-grid-snake.svg
+          git commit -m "Update GitHub Contribution Snake" || echo "No changes to commit"
+          git push -f origin output
